# energy-efficiency

./: .doc-rules.json  .ext  .gitignore  .loop  .own  .own.cognitive  .own.group_p  .own.readme  .raw-ref  .readme-rules.json  .roadmap  .verify_cache.json  CLAUDE.md  CONTRIBUTING.md  INDEX.json  Makefile  README.md  README.md.sealed.hash  SECURITY.md  build_log.txt  hive.json  loop-rules.json  model_utils.py  project.hexa  pyproject.toml  standalone_registry.toml
tools/nexus6/: Cargo.toml
tools/nexus6/scripts/: auto_grow.sh  claude_hook_config.json  grow_architecture.sh  grow_lens.sh  grow_lenses.sh  grow_modules.sh  grow_tests.sh  growth_infinite_lens.py  measure.sh  nexus6_growth_daemon.sh  ouroboros_scan_test.py  run_benchmarks.sh
tools/nexus6/src/: lib.rs  main.rs  python.rs
tools/nexus6/src/alert/: mod.rs
tools/nexus6/src/api/: mod.rs
tools/nexus6/src/auto_register/: mod.rs
tools/nexus6/src/autonomous/: agent.rs  mod.rs
tools/nexus6/src/cli/: dashboard.rs  mod.rs  parser.rs  runner.rs
tools/nexus6/src/consciousness_bridge/: mod.rs
tools/nexus6/src/cross_intel/: mod.rs
tools/nexus6/src/distributed/: mod.rs
tools/nexus6/src/dream/: mod.rs
tools/nexus6/src/encoder/: mod.rs
tools/nexus6/src/event/: mod.rs
tools/nexus6/src/experiment/: runner.rs
tools/nexus6/src/feedback/: collector.rs  mod.rs
tools/nexus6/src/genetic_prog/: mod.rs
tools/nexus6/src/gpu/: mod.rs
tools/nexus6/src/graph/: bt_nodes.rs  edge.rs  mod.rs  (+2 more)
tools/nexus6/tests/: cognitive_temporal_social_test.rs  extended_discovery_test.rs  integration_test.rs  telescope_test.rs
(+6593 files in other folders)
