[package]
name = "nexus6"
version = "0.1.0"
edition = "2021"
description = "NEXUS-6 discovery engine — Metal GPU compute infrastructure"

[[bin]]
name = "nexus6"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
